[hw-1] refactor: Extend exception handling and simplify exception classes